@@ -1,13 +1,8 @@
 package com.creatorsnotebook.backend.model.service;
 
-import com.creatorsnotebook.backend.model.dto.ProjectDto;
-import com.creatorsnotebook.backend.model.dto.UserProjectBridgeDto;
-import com.creatorsnotebook.backend.model.entity.ProjectEntity;
-import com.creatorsnotebook.backend.model.entity.UserEntity;
-import com.creatorsnotebook.backend.model.entity.UserProjectBridgeEntity;
-import com.creatorsnotebook.backend.model.repository.ProjectRepository;
-import com.creatorsnotebook.backend.model.repository.UserProjectBridgeRepository;
-import com.creatorsnotebook.backend.model.repository.UserRepository;
+import com.creatorsnotebook.backend.model.dto.*;
+import com.creatorsnotebook.backend.model.entity.*;
+import com.creatorsnotebook.backend.model.repository.*;
 import com.creatorsnotebook.backend.utils.ImageUtil;
 import jakarta.transaction.Transactional;
 import lombok.extern.slf4j.Slf4j;
@@ -16,10 +11,15 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
+import java.security.Principal;
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
+@SuppressWarnings("unused")
 @Service
 @Slf4j
 @Transactional
@@ -33,6 +33,12 @@ public class ProjectServiceImpl implements ProjectService {
   private UserRepository userRepository;
   @Autowired
   private UserProjectBridgeRepository userProjectBridgeRepository;
+  @Autowired
+  private CharacterRepository characterRepository;
+  @Autowired
+  private CharacterTemplateRepository characterTemplateRepository;
+  @Autowired
+  private TagRepository tagRepository;
 
   /**
    * 프로젝트 정보를 받아서 신규 프로젝트를 생성한다.
@@ -71,11 +77,12 @@ public class ProjectServiceImpl implements ProjectService {
   /**
    * 해당 사용자 번호가 소속한 모든 프로젝트를 로드한다.
    *
-   * @param userNo 유저 토큰에서 회수한 유저번호.
+   * @param principal 유저 토큰 principal
    * @return 유저가 접근가능한 프로젝트의 목록
    */
   @Override
-  public List<ProjectDto> loadAllProjects(long userNo) {
+  public List<ProjectDto> loadAllProjects(Principal principal) {
+    long userNo = Long.parseLong(principal.getName());
 //    UserEntity user = UserEntity.builder().no(userNo).build();
     List<UserProjectBridgeEntity> result = userProjectBridgeRepository.findAllFetchJoinByUserEntity(userNo);
 //    List<UserProjectBridgeEntity> result = userProjectBridgeRepository.loadJoinedProjects(userNo);
@@ -87,27 +94,177 @@ public class ProjectServiceImpl implements ProjectService {
               projectDto.setBridgeNo(userProjectBridgeEntity.getNo());
               return projectDto;
             })
-            .toList();
+            .collect(Collectors.toList());
   }
+
 
   /**
    * 프로젝트 삭제를 수행한다.
+   * 내부적인 연결된 모든 요소를 다 삭제한다.
+   *
    * @param projectUuid 삭제할 프로젝트 UUID
-   * @param userNo 삭제 요청을 하는 유저의 번호.
+   * @param userNo      삭제 요청을 하는 유저의 번호.
    * @return 프로젝트 삭제 성공 여부
    */
   @Override
   public boolean deleteProject(UUID projectUuid, long userNo) {
-    UserProjectBridgeEntity bridge = userProjectBridgeRepository.findByProjectUuidAndUserNo(projectUuid,userNo);
-    if(bridge!=null && ("CREATOR".equals(bridge.getAuthority())||"ADMIN".equals(bridge.getAuthority()))){
+    UserProjectBridgeEntity bridge = userProjectBridgeRepository.findByProjectUuidAndUserNo(projectUuid, userNo);
+    if (bridge != null && ("CREATOR".equals(bridge.getAuthority()) || "ADMIN".equals(bridge.getAuthority()))) {
+//      characterRepository.deleteCharactersByProject(projectUuid);
+//      characterTemplateRepository.deleteCharacterTemplatesByProject(projectUuid);
+
+      // TODO -> 추가적인 하위 내용 생성시 삭제 코드 추가.
+
+      // 프로젝트 삭제
       ProjectEntity projectEntity = bridge.getProjectEntity();
-      if(projectEntity.getImage()!=null || "".equals(projectEntity.getImage())){
+      if (projectEntity.getImage() != null || "".equals(projectEntity.getImage())) {
         imageUtil.deleteImage(projectEntity.getImage());
       }
       projectRepository.delete(bridge.getProjectEntity());
       return true;
     }
     return false;
+  }
+
+  @Override
+  public void deleteProjectCharacterImages(UUID projectUuid, long userNo) {
+    UserProjectBridgeEntity bridge = userProjectBridgeRepository.findByProjectUuidAndUserNo(projectUuid, userNo);
+    if (bridge != null && ("CREATOR".equals(bridge.getAuthority()) || "ADMIN".equals(bridge.getAuthority()))) {
+      // 캐릭터 이미지 확인하고 지우기
+      List<CharacterEntity> characters = characterRepository.findAllByProjectUuid(projectUuid);
+
+      for (CharacterEntity ce : characters) {
+        for (CharacterAttribute ca : ce.getData().values()) {
+          if ("image".equals(ca.getType())) {
+            imageUtil.deleteImage((String) ca.getValue());
+          }
+        }
+      }
+      log.info("==Removed All Character Images");
+    }
+  }
+
+  /**
+   * 프로젝트의 모든 정보를 읽어와 반환한다.
+   * 단 미공개 프로젝트의 경우 UserProjectBridge를 참고하여 권한 체크를 수행.
+   *
+   * @param projectUuid 검색할 프로젝트의 고유번호
+   * @param principal   유저의 인증
+   * @return 프로젝트 데이터가 보관된 ProjectDto. 권한없음 및 기타 경우엔 null 반환
+   */
+  @Override
+  public ProjectDto loadProject(UUID projectUuid, Principal principal) {
+    ProjectEntity project = projectRepository.findById(projectUuid).orElse(null);
+    if (project == null) {
+      return null;
+    }
+    ProjectDto projectDto = new ProjectDto(project);
+    /*
+     * 미개방 프로젝트의 경우 프로젝트 접근 권한을 확인한다.
+     * URL을 기반으로 들어오는경우를 대비.
+     */
+    if (!project.isOpenToPublic()) {
+      if (principal == null) {
+        return null;
+      }
+      long userNo = Long.parseLong(principal.getName());
+      UserProjectBridgeEntity userProjectBridgeEntity = userProjectBridgeRepository.findByProjectUuidAndUserNo(projectUuid, userNo);
+      if (userProjectBridgeEntity == null) return null;
+      projectDto.setAuthority(userProjectBridgeEntity.getAuthority());
+    }
+    /*
+     * 캐릭터 데이터 로드
+     */
+    List<CharacterDto> characterList = characterRepository.findAllByProjectUuid(projectUuid).stream().map((characterEntity -> CharacterDto.builder()
+                    .uuid(characterEntity.getUuid())
+                    .createDate(characterEntity.getCreateDate())
+                    .editDate(characterEntity.getEditDate())
+                    .data(characterEntity.getData())
+                    .order(characterEntity.getDataOrder())
+                    .tagList(characterEntity.getTags().stream().map(characterTagBridgeEntity ->
+                            characterTagBridgeEntity.getTagEntity().getNo()
+                    ).collect(Collectors.toList()))
+                    .build()
+            )
+    ).collect(Collectors.toList());
+    /*
+     * 프로젝트 소속된 태그 로드
+     */
+    Map<Long, TagDto> tagMap = tagRepository.findAllByProjectUuid(projectUuid).stream().collect(Collectors.toMap(TagEntity::getNo, tagEntity -> TagDto.builder()
+            .no(tagEntity.getNo())
+            .tagName(tagEntity.getTagName())
+            .textColor(tagEntity.getTextColor())
+            .hexColor(tagEntity.getHexColor())
+            .build()));
+
+    projectDto.setTagMap(tagMap);
+    projectDto.setCharacterList(characterList);
+    return projectDto;
+  }
+
+  /**
+   * 프로젝트의 이름을 변경한다.
+   * 단. 사용자의 프로젝트에 대한 권한을 확인한 이후 수행한다..
+   *
+   * @param projectDto 변경할 프로젝트 정보
+   * @return 변환 성공 여부 boolean
+   */
+  @Override
+  public boolean changeProjectTitle(ProjectDto projectDto) {
+    if (!("CREATOR".equals(projectDto.getAuthority()) || "ADMIN".equals(projectDto.getAuthority()))) {
+      return false;
+    }
+    int res = projectRepository.changeProjectTitle(projectDto.getUuid(), projectDto.getTitle());
+    log.info("ChangeProjectTitle res = {}", res);
+    return res > 0;
+  }
+
+
+  /**
+   * 프로젝트의 설명을 변경한다.
+   *
+   * @param projectDto description, uuid가 포함된 ProjectDto
+   * @return 변경 성공여부
+   */
+  @Override
+  public boolean changeProjectDescription(ProjectDto projectDto) {
+    if (!("CREATOR".equals(projectDto.getAuthority()) || "ADMIN".equals(projectDto.getAuthority()))) {
+      return false;
+    }
+    int res = projectRepository.changeProjectDescription(projectDto.getUuid(), projectDto.getDescription());
+    log.info("ChangeProjectDescription res = {}", res);
+    return res > 0;
+  }
+
+
+  /**
+   * 프로젝트의 이미지를 변경한다.
+   * 기존 이미지가 있으면 해당 이미지를 삭제한다.
+   *
+   * @param projectDto 프로젝트 정보(uuid, [image(기존이미지])
+   * @param file       신규 이미지 파일
+   * @return 이미지 변경 성공여부
+   */
+  @Override
+  public String changeProjectImage(ProjectDto projectDto, MultipartFile file) {
+    log.info("previous image = {}, uuid = {}", projectDto.getImage(), projectDto.getUuid());
+    if (projectDto.getUuid() == null || file.isEmpty()) {
+      return null;
+    }
+    if (projectDto.getImage() != null) {
+      log.info("Deleting image = {}", projectDto.getImage());
+      imageUtil.deleteImage(projectDto.getImage());
+    }
+    try {
+      String newImageName = imageUtil.saveImage(file);
+      int res = projectRepository.changeProjectImage(projectDto.getUuid(), newImageName);
+      if (res > 0) {
+        return newImageName;
+      }
+    } catch (IOException e) {
+      log.error("ProjectServiceImpl::changeProjectImage 이미지 저장 실패");
+    }
+    return null;
   }
 }
 
